--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Tim Berners-Lee</title>
 </head>
 <body>
+    <header>
+        <div>
+            <img src="./img/pattern.png">
+            <img src="./img/Booleaner.png">
+        </div>
+    </header>
     
 </body>
 </html>
