background image header

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <div>
-            <img src="./img/pattern.png">
+        <div class="header">
+            <p class="imgH" style="background-image: url('./img/pattern.png');">
             <img src="./img/Booleaner.png">
         </div>
     </header>
