--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header">
             <p class="imgH" style="background-image: url('./img/pattern.png');">
-            <img src="./img/Booleaner.png">
+            <img class="imgT" src="./img/Booleaner.png">
         </div>
     </header>
     
