--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tim Berners-Lee</title>
-    <link rel="stylesheet" href="styles.css"
-</head>
+    <link rel="stylesheet" href="styles.css" </head>
+
 <body>
     <header>
         <div class="header">
             <p class="imgH" style="background-image: url('./img/pattern.png');">
-            <img class="imgT" src="./img/Booleaner.png">
+                <img class="imgT" src="./img/Booleaner.png">
         </div>
     </header>
-    
+    <div class="body">
+        <h1>Internet deve essere al servizio del "bene pubblico": il<br> manifesto di Tim Berners-Lee</h1>
+
+    </div>
 </body>
+
 </html>
