--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
     </header>
     <div class="body">
         <h1>Internet deve essere al servizio del "bene pubblico": il<br> manifesto di Tim Berners-Lee</h1>
+        <br>
+        <h5>Scritto da <a href="https://boolean.careers/">The Booleaner</a> il 10/10/2020 </h5>
+        <img class="tim1" src="./img/tim-1.jpg">
+        <img class="tim2" src="./img/tim-2.jpg">
+        <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>2nd Photo: Wikimedia, by Paul
+            Clarke</h4>
+        <br>
+        <h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+            dolore magna aliquam erat volutpat.
+            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
+            commodo consequat.
+            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
+            feugiat nulla facilisis at vero
+            eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te
+            feugait nulla facilisi.</h3>
 
     </div>
+
 </body>
 
 </html>
