--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tim Berners-Lee</title>
-    <link rel="stylesheet" href="styles.css" </head>
+    <link rel="stylesheet" href="styles.css"></link>
+</head>
 
 <body>
     <header>
@@ -18,11 +19,14 @@
     <div class="body">
         <h1>Internet deve essere al servizio del "bene pubblico": il<br> manifesto di Tim Berners-Lee</h1>
         <br>
-        <h5>Scritto da <a href="https://boolean.careers/">The Booleaner</a> il 10/10/2020 </h5>
+        <h5>Scritto da 
+            <a href="https://boolean.careers/">The Booleaner</a>
+            <br>il 10/10/2020
+        </h5><br>
         <img class="tim1" src="./img/tim-1.jpg">
         <img class="tim2" src="./img/tim-2.jpg">
-        <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>2nd Photo: Wikimedia, by Paul
-            Clarke</h4>
+        <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>2nd Photo: Wikimedia, by Paul
+            Clarke</p>
         <br>
         <h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
             dolore magna aliquam erat volutpat.
@@ -38,8 +42,29 @@
             <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </li>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat...</li>
         </ul>
-
     </div>
+    <table>
+        <tr>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+        </tr>
+        <tr>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+        </tr>
+        <tr>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+        </tr>
+        <tr>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+            <td>ja sam roki</td>
+        </tr>
+    </table>
 
 </body>
 
