--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tim Berners-Lee</title>
-    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="stylesheet" href="styles.css">
+    </link>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <div class="body">
         <h1>Internet deve essere al servizio del "bene pubblico": il<br> manifesto di Tim Berners-Lee</h1>
         <br>
-        <h5>Scritto da 
+        <h5>Scritto da
             <a href="https://boolean.careers/">The Booleaner</a>
             <br>il 10/10/2020
         </h5><br>
@@ -38,34 +39,47 @@
             feugait nulla facilisi.</h3>
         <br>
         <ul>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat...</li>
-            <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. </li>
-            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat...</li>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat volutpat...</li>
+            <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+                ex ea commodo consequat. </li>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat volutpat...</li>
         </ul>
-    </div>
+    
     <table>
-        <tr>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
+        <tr class="primo">
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+        </tr>
+        <tr class="colore-blu">
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                eveniet expedita a quia modi.
+                Totam saepe quibusdam natus harum.</td>
         </tr>
         <tr>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                eveniet expedita a quia modi.
+                Totam saepe quibusdam natus harum.</td>
         </tr>
-        <tr>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
-        </tr>
-        <tr>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
-            <td>ja sam roki</td>
+        <tr class="colore-blu">
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor</td>
+            <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                eveniet expedita a quia modi.
+                Totam saepe quibusdam natus harum.</td>
         </tr>
     </table>
 
+    </div>
 </body>
 
 </html>
