--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 laoreet dolore magna aliquam erat volutpat...</li>
         </ul>
     <br>
+    <br>
     <table>
         <tr class="primo">
             <td>Lorem ipsum dolor</td>
@@ -78,6 +79,14 @@
                 Totam saepe quibusdam natus harum.</td>
         </tr>
     </table>
+    <br>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum. 
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. 
+        Totam saepe quibusdam natus harum.
+    </p>
 
     </div>
 </body>
