--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header">
             <p class="imgH" style="background-image: url('./img/pattern.png');">
-                <img class="imgT" src="./img/Booleaner.png">
+                <img class="imgT" src="./img/logo.svg">
         </div>
     </header>
     <div class="body">
@@ -88,6 +88,11 @@
         Totam saepe quibusdam natus harum.
     </p>
 
+    </div>
+    <div class="footer">
+
+        <img class="monitor" src="./img/monitor.jpg" alt="monitor">
+        <img class="graph" src="./img/graph.jpg" alt="graph">
     </div>
 </body>
 
