fatoo anche picoli effeti senza bonus

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     </div>
     <div class="footer">
-
+        <p>Potrebbero interessarti</p>
         <img class="monitor" src="./img/monitor.jpg" alt="monitor">
         <img class="graph" src="./img/graph.jpg" alt="graph">
     </div>
