--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>2nd Photo: Wikimedia, by Paul
             Clarke</p>
         <br>
-        <h3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+        <p3>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
             dolore magna aliquam erat volutpat.
-            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
-            commodo consequat.
+            Ut wisi enim ad minim veniam, quis nostrud <span style="background-color: yellow;">exerci tation ullamcorper
+                suscipit lobortis nisl ut aliquip ex ea
+                commodo consequat.</span>
             Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu
             feugiat nulla facilisis at vero
             eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te
-            feugait nulla facilisi.</h3>
+            feugait nulla facilisi.</p3>
         <br>
         <ul>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -46,54 +47,67 @@
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
                 laoreet dolore magna aliquam erat volutpat...</li>
         </ul>
-    <br>
-    <br>
-    <table>
-        <tr class="primo">
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-        </tr>
-        <tr class="colore-blu">
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
-                eveniet expedita a quia modi.
-                Totam saepe quibusdam natus harum.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
-                eveniet expedita a quia modi.
-                Totam saepe quibusdam natus harum.</td>
-        </tr>
-        <tr class="colore-blu">
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
-                eveniet expedita a quia modi.
-                Totam saepe quibusdam natus harum.</td>
-        </tr>
-    </table>
-    <br>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-        Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum. 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-        Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. 
-        Totam saepe quibusdam natus harum.
-    </p>
+        <br>
+        <br>
+        <table>
+            <tr class="primo">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+            </tr>
+            <tr class="colore-blu">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo
+                    mollitia
+                    eveniet expedita a quia modi.
+                    Totam saepe quibusdam natus harum.</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo
+                    mollitia
+                    eveniet expedita a quia modi.
+                    Totam saepe quibusdam natus harum.</td>
+            </tr>
+            <tr class="colore-blu">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo
+                    mollitia
+                    eveniet expedita a quia modi.
+                    Totam saepe quibusdam natus harum.</td>
+            </tr>
+        </table>
+        <br>
+        <p3>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+            dolore magna aliquam erat volutpat.
+            Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea
+            commodo consequat.
+            Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <span
+                style="background-color: yellow;">illum dolore eu feugiat nulla facilisis at vero eros et accumsan et
+                iusto</span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
+            nulla facilisi.
+        </p3>
 
     </div>
+    <p style="margin-left:20px">Potrebbero interessarti </p>
     <div class="footer">
-        <p>Potrebbero interessarti</p>
         <img class="monitor" src="./img/monitor.jpg" alt="monitor">
         <img class="graph" src="./img/graph.jpg" alt="graph">
+        <div>
+            <p class="footertxt">Lorem ipsum dolor</p>
+            <p class="footertxt2">Lorem ipsum dolor</p>
+        </div>
     </div>
+
+
+
 </body>
 
 </html>
